--- a/charts/azure-guard/values.yaml
+++ b/charts/azure-guard/values.yaml
@@ -5,6 +5,7 @@ connectedCluster: #Required Azure connected cluster subscription Id
 location: #Required Azure resource group location
 clientId:  #Required Azure connected cluster client Id 
 clientSecret: #Required Azure connected cluster client secret
+keyvaultName: #Required Azure keyvault name
 
 jobImage: delanyo32/guard-onboarding:latest
 demonsetImage: delanyo32/master-config:latest
