--- a/charts/azure-guard/templates/demonset.yaml
+++ b/charts/azure-guard/templates/demonset.yaml
@@ -39,6 +39,7 @@ spec:
       containers:
       - name: master-config
         image: {{ .Values.demonsetImage }}
+        command: ["/bin/bash", "/daemonset.sh"]
         resources:
           limits:
             memory: 200Mi
